src/scss/main.scss
/* ... */
.team {
    padding: 80px 0;

    &__title {
        display: flex;
        align-items: center;
        margin-bottom: 40px;

        h2, h3, h4, h5 {
            margin-right: 20px;
            font-size: 42px;
            font-weight: 500;

            @include media-breakpoint-down(sm) {
                font-size: 25px;
            }
        }

        button {
            font-size: 14px;
            font-weight: 700;
        }
    }

    &__slider {
        position: relative;
        margin: 0 -20px;
    }
}

.image-card {
    margin: 0 20px;
    background: $darkest;
    padding: 40px;

    .image-card__image-outlay {
        background: radial-gradient(125.99% 125.99% at 19.21% -4.52%, #192533 0%, rgba(211, 232, 255, 0.640625) 35.94%, rgba(25, 37, 51, 0) 100%);
        filter: drop-shadow(0px 0px 30px rgba(0, 0, 0, 0.15));
        padding: 5px;
        width: 177px;
        height: 177px;
        border-radius: 50%;
        left: 0;
        right: 0;
        margin: auto auto 30px;
        display: flex;
        justify-content: center;
        align-items: stretch;
    }

    &__image {
        overflow: hidden;
        width: 100%;
        border-radius: 50%;
        display: flex;
        justify-content: center;
        align-items: center;

        img {
            width: 100%;
            -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
            filter: grayscale(100%);
        }
    }

    &__role {
        h3, h4, h5 {
            font-size: 22px;
            font-weight: 700;
            margin-bottom: 20px;
        }
    }

    &__name {
        h3, h4, h5 {
            color: #BAC8E9;
            font-size: 16px;
            font-weight: 400;
            margin-bottom: 20px;
        }
    }

    &__description {
        min-height: 105px;
        margin-bottom: 20px;

        span {
            font-size: 14px;
            font-weight: 300;
            opacity: 0.5;
            color: $white;
            display: block;
        }
    }

    &__more {
        a {
            color: $white;
            text-decoration: none;
            text-transform: uppercase;
            font-size: 12px;
            font-weight: 500;

            &:hover {
                color: $danger;
            }
        }
    }
}

//---------------------------------------------
// 3.Components
//---------------------------------------------

@import "components/main-nav";
@import "components/top-banner";
@import "components/icon-card";
@import "components/footer";

.btn {
    font-family: 'Rubik', sans-serif;
    text-transform: uppercase;

    &.btn-light {
        background: $white;
        border-color: $white;
    }

    &.btn-outline-light {
        border-color: $white;
        color: $white;

        &:hover {
            background: $white;
            color: $black;
        }
    }
}

.slick-dots {
    margin: 0;
    padding: 0;
    list-style: none;
    display: flex;
    position: absolute;
    top: -80px;
    right: 30px;

    @include media-breakpoint-down(md) {
        top: auto;
        bottom: -40px;
        right: 0;
        left: 0;
        margin: auto;
        display: flex;
        justify-content: center;
    }

    li {
        position: relative;
        width: 10px;
        height: 10px;
        margin: 0 5px;

        &:hover {
            cursor: pointer;
        }

        &::before {
            content: '';
            position: absolute;
            width: 10px;
            height: 10px;
            border-radius: 50%;
            background: $white;
            opacity: 0.3;
            top: 0;
            bottom: 0;
            left: 0;
            right: 0;
        }

        &.slick-active {
            &::before {
                background: $danger;
                opacity: 1;
            }
        }
    }

    button {
        display: none;
    }
}

